# dvbeckwitt.github.io

./: .gitignore  AGENTS.md  README.md  _config.yml  about.md  blog.md  contact.md  cv.md  index.html  index.md  notes.md  outputs.md  posts.md  projects.md  research.md  teaching-philosophy.md
_data/: social.yml  (+2 more)
cv-source/: .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  changes_summary.md  main.tex  pyproject.toml  requirements-dev.txt  settings.sty
cv-source/.github/: CODEOWNERS  pull_request_template.md
cv-source/.github/workflows/: check.yml  gitleaks.yml  strict-latex.yml
cv-source/applications/: README.md
cv-source/applications/common/: application_quality_checklist.md  application_style_calibration.md  cover_letter_base_format.md  cover_letter_voice_guide.md  evidence_matrix_template.md  job_posting_intake.md  resume_base_format.md  (+1 more)
cv-source/bib/: own-bib.bib
cv-source/data/: README.md  cv_master.json
cv-source/docs/: architecture.md  index.md  reproducibility-governance-status.md  setup-windows-latex.md
cv-source/exports/: Beckwitt_CV_AI.json  Beckwitt_CV_AI.md  Beckwitt_CV_AI.txt  README.md
cv-source/outputs/: README.md
cv-source/scripts/: __init__.py  application_docx.py  build_cv.py  check_repo.py  clean_build.py  export_cv_ai.py
cv-source/sections/: Projects.tex  awards.tex  community.tex  currentjob.tex  education.tex  employment.tex  publications.tex  referee.tex  skills.tex  teaching.tex
cv-source/tests/: test_check_repo.py
(+41 files in other folders)
