[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beckwitt-cv"
version = "0.1.0"
description = "Evidence-controlled CV and application-material repository."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=7",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4",
]
pre-commit = [
    "pre-commit>=4",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "applications/examples/**/originals",
    "build",
    "docs/compiled",
    "exports",
    "outputs",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
files = ["scripts", "tests"]
show_error_codes = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict_equality = true
